objects/ssot__HotelStayEnergyUse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarbonFootprintReportDate__c</fullName>
        <label>Carbon Footprint Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CostCenterName__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HotelCityName__c</fullName>
        <label>Hotel City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HotelCountry__c</fullName>
        <label>Hotel Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HotelName__c</fullName>
        <label>Hotel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HotelStayEmssnFctrId__c</fullName>
        <label>Hotel Stay Emissions Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Hotel Stay Energy Use Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RoomCount__c</fullName>
        <label>Room Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RoomType__c</fullName>
        <label>Room Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3CrbnFtprntId__c</fullName>
        <label>Scope 3 Carbon Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmssnSrcId__c</fullName>
        <label>Scope 3 Emissions Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StayNightsCount__c</fullName>
        <label>Number of Nights</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3EmissionsNumber__c</fullName>
        <label>Supl Scope 3 Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierId__c</fullName>
        <label>Supplier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelerName__c</fullName>
        <label>Traveler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383586466_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HotelStayEnergyUse_Scope3EmssnSrcId__rel</label>
        <referenceTo>ssot__Scope3EmissionsSource__dlm</referenceTo>
        <relationshipLabel>HotelStayEnergyUse_Scope3EmssnSrcId__rel</relationshipLabel>
        <relationshipName>rel_1747383586466_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383592440_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HotelStayEnergyUse_Scope3CrbnFtprntI_rel</label>
        <referenceTo>ssot__Scope3CarbonFootprint__dlm</referenceTo>
        <relationshipLabel>HotelStayEnergyUse_Scope3CrbnFtprntI_rel</relationshipLabel>
        <relationshipName>rel_1747383592440_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383597079_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HotelStayEnergyUse_AccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>HotelStayEnergyUse_AccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1747383597079_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>